force-app/main/default/objects/Course_Schedule__c/fields/Course_Offering__c.field-meta.xml
<CustomField>
    <fullName>Course_Offering__c</fullName>
    <label>Course Module</label>
    <referenceTo>Course_Offering__c</referenceTo>
    <relationshipLabel>Course Sessions</relationshipLabel>
    <relationshipName>Course_Schedules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>