force-app/main/default/objects/Course_Schedule__c/fields/Download_File_URL__c.field-meta.xml
<CustomField>
    <fullName>Download_File_URL__c</fullName>
    <label>Download File URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>