force-app/main/default/objects/Course_Schedule__c/fields/Module_Name__c.field-meta.xml
<CustomField>
    <fullName>Module_Name__c</fullName>
    <formula>Course_Offering__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Module Name</label>
    <type>Text</type>
</CustomField>