force-app/main/default/objects/Course_Schedule__c/fields/Planned_By__c.field-meta.xml
<CustomField>
    <fullName>Planned_By__c</fullName>
    <label>Planned By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>System</fullName>
            </value>
            <value>
                <fullName>Mentor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>