force-app/main/default/objects/Course_Schedule__c/fields/Self_Paced__c.field-meta.xml
<CustomField>
    <fullName>Self_Paced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Self Paced</label>
    <type>Checkbox</type>
</CustomField>