force-app/main/default/objects/Course_Schedule__c/fields/Session_Agenda__c.field-meta.xml
<CustomField>
    <fullName>Session_Agenda__c</fullName>
    <label>Session Agenda</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>