force-app/main/default/objects/Course_Schedule__c/fields/Session_Duration__c.field-meta.xml
<CustomField>
    <fullName>Session_Duration__c</fullName>
    <label>Session Duration</label>
    <type>Time</type>
</CustomField>