force-app/main/default/objects/Course_Schedule__c/fields/Session_s_Title__c.field-meta.xml
<CustomField>
    <fullName>Session_s_Title__c</fullName>
    <label>Session&apos;s Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>