force-app/main/default/objects/Course_Schedule__c/fields/Video_File_URL__c.field-meta.xml
<CustomField>
    <fullName>Video_File_URL__c</fullName>
    <label>Video File URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>