force-app/main/default/objects/Course_Schedule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Course_Offering__c</columns>
    <columns>Planned_By__c</columns>
    <columns>Session_Agenda__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Start_Time__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>