force-app/main/default/objects/Course_Schedule__c/listViews/All_Course_Sessions.listView-meta.xml
<ListView>
    <fullName>All_Course_Sessions</fullName>
    <columns>NAME</columns>
    <columns>Course_Offering__c</columns>
    <columns>Session_s_Title__c</columns>
    <columns>Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Course Sessions</label>
</ListView>